--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "axios": "1.3.4",
     "axios-mock-adapter": "1.21.2",
     "babel-eslint": "10.1.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap-icons": "1.10.3",
     "chart.js": "4.2.1",
     "cleave.js": "1.6.0",
