--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@popperjs/core": "2.11.6",
     "@reduxjs/toolkit": "1.9.3",
     "apexcharts-clevision": "3.28.5",
-    "axios": "1.3.4",
+    "axios": "^1.6.5",
     "axios-mock-adapter": "1.21.2",
     "babel-eslint": "10.1.0",
     "bcryptjs": "^2.4.3",
@@ -51,10 +51,10 @@
     "i18next": "22.4.11",
     "i18next-browser-languagedetector": "7.0.1",
     "i18next-http-backend": "2.2.0",
-    "jsonwebtoken": "8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "keen-slider": "6.8.5",
     "moment": "^2.30.1",
-    "next": "13.2.4",
+    "next": "^13.5.6",
     "nprogress": "0.2.0",
     "payment": "2.4.6",
     "prismjs": "1.29.0",
