--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-hook-form": "7.43.5",
     "react-hot-toast": "2.4.0",
     "react-i18next": "12.2.0",
+    "react-number-format": "^5.3.1",
     "react-perfect-scrollbar": "1.5.8",
     "react-popper": "2.3.0",
     "react-redux": "8.0.5",
