--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
     "serverless-mysql": "^1.5.5",
     "stylis": "4.1.3",
     "stylis-plugin-rtl": "2.1.1",
+    "sweetalert2": "^11.10.5",
+    "sweetalert2-react-content": "^5.0.7",
     "yup": "1.0.2"
   },
   "devDependencies": {
